Fixed infinite loop in nextAction function. Added alignShimeji function to face the moving direction. Todo: Change to single transform instead of two rotation classes.

--- a/src/Shimeji.css
+++ b/src/Shimeji.css
@@ -8,6 +8,13 @@
     position: fixed;
 }
 
+.flip-horizontal {
+    transform: rotateX(180deg);
+}
+.flip-vertical {
+    transform: rotateY(180deg);
+}
+
 img.shimeji-frame {
     width: 100%;
     height: auto;
